--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11281,4 +11281,32 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+a{
+    text-decoration: none;
+    color: black;
+}
+
+.form-floating{
+    width: 90%!important;
+}
+
+#contactsList{
+    list-style: none;
+}
+
+#formBox{
+    border-radius: 30px;
+    border: 4px solid rgba(0, 255, 132, 0.684)!important;
+    display: flex!important;
+    justify-content: center!important;
+}
+
+#contactFormButton{
+    border-radius: 20px;
+    background-color: transparent;
+    border: 2px solid rgba(0, 255, 132, 0.684);
+    width: 200px;
+    font-size: 15px;
+    padding: 15px;
+}
 
